--- a/PCStudioApp.json
+++ b/PCStudioApp.json
@@ -8166,14 +8166,9 @@
     "FFlagTCTexturesListInImGui": true,
     "FFlagAXTryOnAvatarProperties2": true,
     "FFlagVideoFrameSupportAppContent": true,
-    "FFlagAXHideCATooltipsForVR_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:38:29",
     "FFlagEnableRetryForLinkingProtocolFetch": true,
     "FFlagEnableToSwitchToSettingsAppWithRouteLua": true,
     "FFlagShowDevicePermissionsModal3": true,
-    "FFlagAXLooksBackendToasts_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagAXLooksComposerPolish_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagFFlagAXRepositionLooksFormKeyboard_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagLooksComposerConfirmationModal_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
     "FFlagHideStartupController_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:51:03",
     "FFlagRenderCrashOnFailedMemoryMap2": true,
     "FFlagAXFixBundleVerifiedBadgeInWidgets_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
@@ -8190,6 +8185,12 @@
     "FFlagAXMySharedAvatarsTitleTooltip2": true,
     "FFlagFFlagAXCommunityAvatarEntryButtonTooltip2": true,
     "FFlagAddClientChannelToHeartbeat": true,
+    "FFlagAXHideCATooltipsForVR": true,
+    "FFlagInsertServiceGetFreeNewBackend_Staged": "true;SteadyState;10;30;Revert;2024-10-28T22:50:31",
+    "FFlagAXLooksBackendToasts": true,
+    "FFlagAXLooksComposerPolish": true,
+    "FFlagFFlagAXRepositionLooksFormKeyboard": true,
+    "FFlagLooksComposerConfirmationModal": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -9133,14 +9134,12 @@
     "FFlagEnableShowVoiceUIV6": true,
     "FFlagUseAssetTypeForRefinementKeys": true,
     "DFFlagDataStoreSerializationRefactor": true,
-    "FFlagScreenshotsSetupEnabled_v1_Rollout": "false;60;2024-10-28T21:37:23",
-    "FFlagLuaStartPageWaitForLogin_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:40:35",
-    "FFlagDynamicUserIDRecentPage_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:41:54",
     "FFlagAXFixLookComposerExitPrompt_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
     "FFlagAXLookComposerStepsRefactor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
     "FFlagAddMainThreadSignalsDataModelManager": true,
     "FFlagAXEnableCommunityAvatarsEntryPoint2": true,
     "DFFlagContentVariantImplicitString": true,
+    "FFlagLuaStartPageWaitForLogin": true,
     "FFlagRenderEnableGlobalInstancingD3D11": true,
     "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
@@ -9273,8 +9272,8 @@
     "FFlagSimpleTimerUseRuntimeSyncPrims": true,
     "FFlagEnableVisBugChecks27": true,
     "DFFlagUseVisBugChecks_PlaceFilter": "true;7208091524;7902470429;10489114145;9872472334;8481844229;299659045",
-    "FStringFlagRepoGitHashFastString": "331a90734c669eb15d84e5e0bb857986cf3f1344",
-    "DFStringFlagRepoGitHashDynamicString": "331a90734c669eb15d84e5e0bb857986cf3f1344",
-    "FStringFlipTimeStampFastString": "2024-10-28T22:37:31.053Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:37:31.053Z"
+    "FStringFlagRepoGitHashFastString": "9f2be54ac68e31c4304eb0bed6ac003ae518d4b5",
+    "DFStringFlagRepoGitHashDynamicString": "9f2be54ac68e31c4304eb0bed6ac003ae518d4b5",
+    "FStringFlipTimeStampFastString": "2024-10-28T22:53:24.983Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:53:24.983Z"
 }
