--- a/UWPApp.json
+++ b/UWPApp.json
@@ -8169,11 +8169,6 @@
     "FFlagEnableRetryForLinkingProtocolFetch": true,
     "FFlagEnableToSwitchToSettingsAppWithRouteLua": true,
     "FFlagShowDevicePermissionsModal3": true,
-    "FFlagAXLooksBackendToasts_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagAXLooksComposerPolish_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagFFlagAXRepositionLooksFormKeyboard_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagLooksComposerConfirmationModal_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagHideStartupController_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:51:03",
     "FFlagRenderCrashOnFailedMemoryMap2": true,
     "FFlagAXFixBundleVerifiedBadgeInWidgets_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
     "FFlagAXHideRecommendationsOnFetchFailure_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
@@ -8190,6 +8185,12 @@
     "FFlagFFlagAXCommunityAvatarEntryButtonTooltip2": true,
     "FFlagAddClientChannelToHeartbeat": true,
     "FFlagAXHideCATooltipsForVR": true,
+    "FFlagInsertServiceGetFreeNewBackend_Staged": "true;SteadyState;10;30;Revert;2024-10-28T22:50:31",
+    "FFlagAXLooksBackendToasts": true,
+    "FFlagAXLooksComposerPolish": true,
+    "FFlagFFlagAXRepositionLooksFormKeyboard": true,
+    "FFlagLooksComposerConfirmationModal": true,
+    "FFlagHideStartupController": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -8393,8 +8394,8 @@
     "FFlagAssetPreloadingIXP": true,
     "FFlagUserFixOrbitalCam": true,
     "FFlagScreenshotsIsActive_v1": true,
-    "FStringFlagRepoGitHashFastString": "b1c1362de8a1fb30d8f0c586fdd7dec443b3d5a1",
-    "DFStringFlagRepoGitHashDynamicString": "b1c1362de8a1fb30d8f0c586fdd7dec443b3d5a1",
-    "FStringFlipTimeStampFastString": "2024-10-28T22:42:32.864Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:42:32.864Z"
+    "FStringFlagRepoGitHashFastString": "89d64dc3b3089a4b96916ebf4efb6d0c134be1e1",
+    "DFStringFlagRepoGitHashDynamicString": "89d64dc3b3089a4b96916ebf4efb6d0c134be1e1",
+    "FStringFlipTimeStampFastString": "2024-10-28T22:58:55.630Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:58:55.630Z"
 }
