--- a/iOSApp.json
+++ b/iOSApp.json
@@ -8164,18 +8164,11 @@
     "EnableToSwitchToSettingsAppWithRouteAndroid": true,
     "FFlagFixPeekViewJitter5": true,
     "FFlagTCTexturesListInImGui": true,
-    "FFlagAddClientChannelToHeartbeat_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:32:18",
     "FFlagAXTryOnAvatarProperties2": true,
-    "FFlagFFlagAXCommunityAvatarEntryButtonTooltip2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:34:45",
     "FFlagVideoFrameSupportAppContent": true,
-    "FFlagAXHideCATooltipsForVR_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:38:29",
     "FFlagEnableRetryForLinkingProtocolFetch": true,
     "FFlagEnableToSwitchToSettingsAppWithRouteLua": true,
     "FFlagShowDevicePermissionsModal3": true,
-    "FFlagAXLooksBackendToasts_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagAXLooksComposerPolish_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagFFlagAXRepositionLooksFormKeyboard_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagLooksComposerConfirmationModal_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
     "FFlagHideStartupController_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:51:03",
     "FFlagRenderCrashOnFailedMemoryMap2": true,
     "FFlagAXFixBundleVerifiedBadgeInWidgets_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
@@ -8190,6 +8183,14 @@
     "FFlagAXLookViewportCameraAlignment": true,
     "DFIntRobloxTelemetryPointV2ProdTrafficPercent_Staged": "1;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:30:39",
     "FFlagAXMySharedAvatarsTitleTooltip2": true,
+    "FFlagFFlagAXCommunityAvatarEntryButtonTooltip2": true,
+    "FFlagAddClientChannelToHeartbeat": true,
+    "FFlagAXHideCATooltipsForVR": true,
+    "FFlagInsertServiceGetFreeNewBackend_Staged": "true;SteadyState;10;30;Revert;2024-10-28T22:50:31",
+    "FFlagAXLooksBackendToasts": true,
+    "FFlagAXLooksComposerPolish": true,
+    "FFlagFFlagAXRepositionLooksFormKeyboard": true,
+    "FFlagLooksComposerConfirmationModal": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -8780,13 +8781,13 @@
     "FFlagEnableShowVoiceUIV5": true,
     "FIntScreenshotsExtraToastDuration": 10,
     "DFFlagTeleportPreloadingMetrics5": true,
-    "FFlagScreenshotsAddSubmissionCooldownToast_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:37:45",
     "FFlagAXFixLookComposerExitPrompt_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
     "FFlagAXLookComposerStepsRefactor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
     "FFlagAXEnableCommunityAvatarsEntryPoint2": true,
     "FFlagSendWebViewUserAgentEnabled_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:18:04",
-    "FStringFlagRepoGitHashFastString": "1a4119b90f9a880f9a95a045ff3f0c44a7515542",
-    "DFStringFlagRepoGitHashDynamicString": "1a4119b90f9a880f9a95a045ff3f0c44a7515542",
-    "FStringFlipTimeStampFastString": "2024-10-28T22:34:52.887Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:34:52.887Z"
+    "FFlagScreenshotsAddSubmissionCooldownToast": true,
+    "FStringFlagRepoGitHashFastString": "9f2be54ac68e31c4304eb0bed6ac003ae518d4b5",
+    "DFStringFlagRepoGitHashDynamicString": "9f2be54ac68e31c4304eb0bed6ac003ae518d4b5",
+    "FStringFlipTimeStampFastString": "2024-10-28T22:53:24.983Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:53:24.983Z"
 }
