--- a/AndroidApp.json
+++ b/AndroidApp.json
@@ -8164,18 +8164,11 @@
     "EnableToSwitchToSettingsAppWithRouteAndroid": true,
     "FFlagFixPeekViewJitter5": true,
     "FFlagTCTexturesListInImGui": true,
-    "FFlagAddClientChannelToHeartbeat_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:32:18",
     "FFlagAXTryOnAvatarProperties2": true,
-    "FFlagFFlagAXCommunityAvatarEntryButtonTooltip2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:34:45",
     "FFlagVideoFrameSupportAppContent": true,
-    "FFlagAXHideCATooltipsForVR_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:38:29",
     "FFlagEnableRetryForLinkingProtocolFetch": true,
     "FFlagEnableToSwitchToSettingsAppWithRouteLua": true,
     "FFlagShowDevicePermissionsModal3": true,
-    "FFlagAXLooksBackendToasts_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagAXLooksComposerPolish_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagFFlagAXRepositionLooksFormKeyboard_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagLooksComposerConfirmationModal_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
     "FFlagHideStartupController_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:51:03",
     "FFlagRenderCrashOnFailedMemoryMap2": true,
     "FFlagAXFixBundleVerifiedBadgeInWidgets_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
@@ -8190,6 +8183,14 @@
     "FFlagAXLookViewportCameraAlignment": true,
     "DFIntRobloxTelemetryPointV2ProdTrafficPercent_Staged": "1;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T22:30:39",
     "FFlagAXMySharedAvatarsTitleTooltip2": true,
+    "FFlagFFlagAXCommunityAvatarEntryButtonTooltip2": true,
+    "FFlagAddClientChannelToHeartbeat": true,
+    "FFlagAXHideCATooltipsForVR": true,
+    "FFlagInsertServiceGetFreeNewBackend_Staged": "true;SteadyState;10;30;Revert;2024-10-28T22:50:31",
+    "FFlagAXLooksBackendToasts": true,
+    "FFlagAXLooksComposerPolish": true,
+    "FFlagFFlagAXRepositionLooksFormKeyboard": true,
+    "FFlagLooksComposerConfirmationModal": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -8757,8 +8758,8 @@
     "DFIntRbxStorageErrorLogHundredthsPercent": 100,
     "DFIntRbxStorageInitHundredthsPercent": 100,
     "FFlagAXEnableCommunityAvatarsEntryPoint2": true,
-    "FStringFlagRepoGitHashFastString": "70c2cde27f3e4ceaa00ebe0b6d8309ba8c04d33f",
-    "DFStringFlagRepoGitHashDynamicString": "70c2cde27f3e4ceaa00ebe0b6d8309ba8c04d33f",
-    "FStringFlipTimeStampFastString": "2024-10-28T22:33:04.869Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:33:04.869Z"
+    "FStringFlagRepoGitHashFastString": "9f2be54ac68e31c4304eb0bed6ac003ae518d4b5",
+    "DFStringFlagRepoGitHashDynamicString": "9f2be54ac68e31c4304eb0bed6ac003ae518d4b5",
+    "FStringFlipTimeStampFastString": "2024-10-28T22:53:24.983Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:53:24.983Z"
 }
