--- a/MacStudioApp.json
+++ b/MacStudioApp.json
@@ -8169,10 +8169,6 @@
     "FFlagEnableRetryForLinkingProtocolFetch": true,
     "FFlagEnableToSwitchToSettingsAppWithRouteLua": true,
     "FFlagShowDevicePermissionsModal3": true,
-    "FFlagAXLooksBackendToasts_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagAXLooksComposerPolish_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagFFlagAXRepositionLooksFormKeyboard_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
-    "FFlagLooksComposerConfirmationModal_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:50:03",
     "FFlagHideStartupController_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:51:03",
     "FFlagRenderCrashOnFailedMemoryMap2": true,
     "FFlagAXFixBundleVerifiedBadgeInWidgets_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
@@ -8190,6 +8186,11 @@
     "FFlagFFlagAXCommunityAvatarEntryButtonTooltip2": true,
     "FFlagAddClientChannelToHeartbeat": true,
     "FFlagAXHideCATooltipsForVR": true,
+    "FFlagInsertServiceGetFreeNewBackend_Staged": "true;SteadyState;10;30;Revert;2024-10-28T22:50:31",
+    "FFlagAXLooksBackendToasts": true,
+    "FFlagAXLooksComposerPolish": true,
+    "FFlagFFlagAXRepositionLooksFormKeyboard": true,
+    "FFlagLooksComposerConfirmationModal": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -9133,13 +9134,12 @@
     "FFlagEnableShowVoiceUIV6": true,
     "FFlagUseAssetTypeForRefinementKeys": true,
     "DFFlagDataStoreSerializationRefactor": true,
-    "FFlagLuaStartPageWaitForLogin_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:40:35",
-    "FFlagDynamicUserIDRecentPage_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:41:54",
     "FFlagAXFixLookComposerExitPrompt_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
     "FFlagAXLookComposerStepsRefactor_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-28T21:57:00",
     "FFlagAddMainThreadSignalsDataModelManager": true,
     "FFlagAXEnableCommunityAvatarsEntryPoint2": true,
     "DFFlagContentVariantImplicitString": true,
+    "FFlagLuaStartPageWaitForLogin": true,
     "FFlagRenderEnableGlobalInstancingMetal": true,
     "FFlagVoiceChatStopSendingIceCandidate": false,
     "FFlagShorelinesRemoveDialog": true,
@@ -9273,8 +9273,8 @@
     "FFlagAudioEqualizerEditorSanitizeMidRange": true,
     "FFlagSceneHashMaps4": true,
     "FFlagEnableVisBugChecks27": true,
-    "FStringFlagRepoGitHashFastString": "b1c1362de8a1fb30d8f0c586fdd7dec443b3d5a1",
-    "DFStringFlagRepoGitHashDynamicString": "b1c1362de8a1fb30d8f0c586fdd7dec443b3d5a1",
-    "FStringFlipTimeStampFastString": "2024-10-28T22:42:32.864Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:42:32.864Z"
+    "FStringFlagRepoGitHashFastString": "9f2be54ac68e31c4304eb0bed6ac003ae518d4b5",
+    "DFStringFlagRepoGitHashDynamicString": "9f2be54ac68e31c4304eb0bed6ac003ae518d4b5",
+    "FStringFlipTimeStampFastString": "2024-10-28T22:53:24.983Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-28T22:53:24.983Z"
 }
