--- a/AndroidApp.json
+++ b/AndroidApp.json
@@ -8231,8 +8231,6 @@
     "FFlagEnableServerGetUserPosts_PlaceFilter": "true;82695214392018;92359758414863",
     "FFlagStudioActionsManagedUtil": true,
     "FFlagMakeEntrypointButtonDraggable_v10": true,
-    "FFlagFixEventTileDescription_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T18:25:46",
-    "FFlagColorPickerVRFix2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T18:39:57",
     "FFlagTerrainVoxelReplaceWaterSubvoxel": true,
     "FFlagDevFrameworkFormSpacingSize": true,
     "DFIntWindowsMinimumClientVersion2": 644,
@@ -8240,6 +8238,9 @@
     "DFFlagInferredCrashOverwriteUserId2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T19:03:52",
     "FFlagClusterCacheWorkspaceProperty2": true,
     "FFlagPerformanceControlCLI105137DenoteNoRolloutGroup_Staged": "false;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T19:12:00",
+    "FFlagFixEventTileDescription": true,
+    "FFlagColorPickerVRFix2": true,
+    "FFlagFCFixSmoothSkinning_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T19:45:10",
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -8810,13 +8811,13 @@
     "FFlagHttpAssetCacheInitOnly6": true,
     "FFlagSetContextInfoAttributesOnClient": true,
     "DFStringPerformanceControlMemoryBufferForDevices": "{\\\"Motorola moto e13\\\":0.12, \\\"Amazon KFRAWI\\\":0.075, \\\"Xiaomi M2006C3LG\\\":0.157, \\\"Amazon KFQUWI\\\":0.077, \\\"OPPO ???2471\\\":0.098, \\\"Samsung SM-X200\\\":0.055, \\\"Samsung SM-A156U\\\":0.073, \\\"Samsung SM-T295\\\":0.063, \\\"Samsung SM-A105M\\\":0.048, \\\"Realme RMX3834\\\":0.093, \\\"Samsung SM-T510\\\":0.049, \\\"Vivo 1906\\\":0.064, \\\"Samsung SM-T290\\\":0.065, \\\"Xiaomi 22126RN91Y\\\":0.098}",
-    "FFlagRefactorTeleportServiceGlobalFields4_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T18:27:45",
     "FStringDefaultModeratedAvatarBodyImageAssetId": "\"89053445842149\"",
     "FStringDefaultModeratedAvatarHeadImageAssetId": "\"140234539950892\"",
     "FFlagDebugShowRenderDocWidgetAtStartup_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T18:44:37",
     "FFlagVoiceChatIXPToolDisableCullingIXPFetch_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T18:46:27",
-    "FStringFlagRepoGitHashFastString": "5f2f3da2ef7532361c62c246c6cfd78f6113e002",
-    "DFStringFlagRepoGitHashDynamicString": "5f2f3da2ef7532361c62c246c6cfd78f6113e002",
-    "FStringFlipTimeStampFastString": "2024-10-30T19:27:39.666Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-30T19:27:39.666Z"
+    "FFlagRefactorTeleportServiceGlobalFields4": true,
+    "FStringFlagRepoGitHashFastString": "14c83f665365cac85e48d4eb51f7463e1b6ecac4",
+    "DFStringFlagRepoGitHashDynamicString": "14c83f665365cac85e48d4eb51f7463e1b6ecac4",
+    "FStringFlipTimeStampFastString": "2024-10-30T19:46:02.522Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-30T19:46:02.522Z"
 }
