--- a/AndroidApp.json
+++ b/AndroidApp.json
@@ -8813,11 +8813,11 @@
     "DFStringPerformanceControlMemoryBufferForDevices": "{\\\"Motorola moto e13\\\":0.12, \\\"Amazon KFRAWI\\\":0.075, \\\"Xiaomi M2006C3LG\\\":0.157, \\\"Amazon KFQUWI\\\":0.077, \\\"OPPO ???2471\\\":0.098, \\\"Samsung SM-X200\\\":0.055, \\\"Samsung SM-A156U\\\":0.073, \\\"Samsung SM-T295\\\":0.063, \\\"Samsung SM-A105M\\\":0.048, \\\"Realme RMX3834\\\":0.093, \\\"Samsung SM-T510\\\":0.049, \\\"Vivo 1906\\\":0.064, \\\"Samsung SM-T290\\\":0.065, \\\"Xiaomi 22126RN91Y\\\":0.098}",
     "FStringDefaultModeratedAvatarBodyImageAssetId": "\"89053445842149\"",
     "FStringDefaultModeratedAvatarHeadImageAssetId": "\"140234539950892\"",
-    "FFlagVoiceChatIXPToolDisableCullingIXPFetch_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T18:46:27",
     "FFlagRefactorTeleportServiceGlobalFields4": true,
     "FFlagDebugShowRenderDocWidgetAtStartup": true,
-    "FStringFlagRepoGitHashFastString": "4822787ea9d296287a47923344df1dde7f047fc2",
-    "DFStringFlagRepoGitHashDynamicString": "4822787ea9d296287a47923344df1dde7f047fc2",
-    "FStringFlipTimeStampFastString": "2024-10-30T19:47:48.018Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-30T19:47:48.018Z"
+    "FFlagVoiceChatIXPToolDisableCullingIXPFetch": true,
+    "FStringFlagRepoGitHashFastString": "602383a87142e991d0f77f7b2a0806d4789fecbb",
+    "DFStringFlagRepoGitHashDynamicString": "602383a87142e991d0f77f7b2a0806d4789fecbb",
+    "FStringFlipTimeStampFastString": "2024-10-30T19:52:43.438Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-30T19:52:43.438Z"
 }
