--- a/AndroidApp.json
+++ b/AndroidApp.json
@@ -8816,8 +8816,9 @@
     "FFlagRefactorTeleportServiceGlobalFields4": true,
     "FFlagDebugShowRenderDocWidgetAtStartup": true,
     "FFlagVoiceChatIXPToolDisableCullingIXPFetch": true,
-    "FStringFlagRepoGitHashFastString": "602383a87142e991d0f77f7b2a0806d4789fecbb",
-    "DFStringFlagRepoGitHashDynamicString": "602383a87142e991d0f77f7b2a0806d4789fecbb",
-    "FStringFlipTimeStampFastString": "2024-10-30T19:52:43.438Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-30T19:52:43.438Z"
+    "DFFlagIsFriendsWithUsesAreFriendsEndpointV2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T19:52:22",
+    "FStringFlagRepoGitHashFastString": "0cb3f139c419bf6a699ad8900aa543bc0a32e5d4",
+    "DFStringFlagRepoGitHashDynamicString": "0cb3f139c419bf6a699ad8900aa543bc0a32e5d4",
+    "FStringFlipTimeStampFastString": "2024-10-30T19:53:31.695Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-30T19:53:31.695Z"
 }
