--- a/PCStudioApp.json
+++ b/PCStudioApp.json
@@ -8241,6 +8241,8 @@
     "FFlagFixEventTileDescription": true,
     "FFlagColorPickerVRFix2": true,
     "FFlagFCFixSmoothSkinning_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T19:45:10",
+    "FFlagUserSearchMigrateFollowingStatus_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T19:56:27",
+    "FFlagFixProximityPromptOffsetPop_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T19:57:16",
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -9324,8 +9326,8 @@
     "FFlagSimpleTimerUseRuntimeSyncPrims": true,
     "FFlagEnableVisBugChecks27": true,
     "DFFlagUseVisBugChecks_PlaceFilter": "true;7208091524;7902470429;10489114145;9872472334;8481844229;299659045",
-    "FStringFlagRepoGitHashFastString": "0cb3f139c419bf6a699ad8900aa543bc0a32e5d4",
-    "DFStringFlagRepoGitHashDynamicString": "0cb3f139c419bf6a699ad8900aa543bc0a32e5d4",
-    "FStringFlipTimeStampFastString": "2024-10-30T19:53:31.695Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-30T19:53:31.695Z"
+    "FStringFlagRepoGitHashFastString": "32e9663f813b0bde3c51bf5fe796ec02c0b80354",
+    "DFStringFlagRepoGitHashDynamicString": "32e9663f813b0bde3c51bf5fe796ec02c0b80354",
+    "FStringFlipTimeStampFastString": "2024-10-30T19:58:20.457Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-30T19:58:20.457Z"
 }
