--- a/AndroidApp.json
+++ b/AndroidApp.json
@@ -8251,7 +8251,6 @@
     "FFlagTerrainEditorFlattenAutoFix": true,
     "DFStringMemoryBufferForHarmonyData": "{}",
     "FFlagStudioActionContextIntegration": true,
-    "FFlagRefactorTileTextHeights_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T21:58:58",
     "FFlagStudioBackgroundLogCulling_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:06:50",
     "FFlagStudioFixQtitanRibbonCornerWidget_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:13:50",
     "FFlagLuaAppFixFollowButtonDeeplink_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:14:02",
@@ -8267,6 +8266,10 @@
     "FFlagLuaAppEDPOfficial": true,
     "FFlagEnableNewAuthActionTextExperiment_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:48:03",
     "FFlagSearchEventAddTopResults_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:51:31",
+    "FFlagLuaAppEmphasisOfficial_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T23:00:14",
+    "DFStringCommerceUniverseAllowList_Rollout": "6656347044,6704585586,6710437199,1601065334;60;2024-10-30T23:01:20",
+    "FFlagAXCheckAccessoryDescriptionNotNil_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T23:01:22",
+    "FFlagRefactorTileTextHeights": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -8836,15 +8839,15 @@
     "FFlagHttpAssetCacheInitOnly6": true,
     "FFlagSetContextInfoAttributesOnClient": true,
     "DFStringPerformanceControlMemoryBufferForDevices": "{\\\"Motorola moto e13\\\":0.12, \\\"Amazon KFRAWI\\\":0.075, \\\"Xiaomi M2006C3LG\\\":0.157, \\\"Amazon KFQUWI\\\":0.077, \\\"OPPO ???2471\\\":0.098, \\\"Samsung SM-X200\\\":0.055, \\\"Samsung SM-A156U\\\":0.073, \\\"Samsung SM-T295\\\":0.063, \\\"Samsung SM-A105M\\\":0.048, \\\"Realme RMX3834\\\":0.093, \\\"Samsung SM-T510\\\":0.049, \\\"Vivo 1906\\\":0.064, \\\"Samsung SM-T290\\\":0.065, \\\"Xiaomi 22126RN91Y\\\":0.098}",
-    "FStringDefaultModeratedAvatarBodyImageAssetId": "\"89053445842149\"",
-    "FStringDefaultModeratedAvatarHeadImageAssetId": "\"140234539950892\"",
+    "FStringDefaultModeratedAvatarBodyImageAssetId": 89053445842149,
+    "FStringDefaultModeratedAvatarHeadImageAssetId": 140234539950892,
     "FFlagRefactorTeleportServiceGlobalFields4": true,
     "FFlagVoiceChatIXPToolDisableCullingIXPFetch": true,
     "DFFlagIsFriendsWithUsesAreFriendsEndpointV2": true,
     "DFFlagFixTriangleSupportDir": true,
     "FFlagUseNewImageOnModeratedThumbnails_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:05:45",
-    "FStringFlagRepoGitHashFastString": "c17cbf4b174d5480c8bf39904e5ebd86277c8f93",
-    "DFStringFlagRepoGitHashDynamicString": "c17cbf4b174d5480c8bf39904e5ebd86277c8f93",
-    "FStringFlipTimeStampFastString": "2024-10-30T22:52:44.316Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-30T22:52:44.316Z"
+    "FStringFlagRepoGitHashFastString": "80e6740b025ac5d587929fcd4794d7c91b32186a",
+    "DFStringFlagRepoGitHashDynamicString": "80e6740b025ac5d587929fcd4794d7c91b32186a",
+    "FStringFlipTimeStampFastString": "2024-10-30T23:08:08.103Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-30T23:08:08.103Z"
 }
