--- a/PCClientBootstrapper.json
+++ b/PCClientBootstrapper.json
@@ -152,9 +152,10 @@
     "FFlagUserFixOrbitalCam": true,
     "FFlagEnableAnimatorAnalyticsForRetargeting": true,
     "FFlagValidateMachineUseApi": true,
-    "FStringDefaultModeratedAvatarBodyImageAssetId": "\"89053445842149\"",
-    "FStringDefaultModeratedAvatarHeadImageAssetId": "\"140234539950892\"",
+    "FStringDefaultModeratedAvatarBodyImageAssetId": 89053445842149,
+    "FStringDefaultModeratedAvatarHeadImageAssetId": 140234539950892,
     "FFlagUseNewImageOnModeratedThumbnails_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:05:45",
+    "FFlagMicroProfileCounterOverflowFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:55:40",
     "FFlagWindowsBootstrapperAdditionalCdnDiagnostics2": true,
     "FFlagBootstrapperEnableOptOutDUAR": true,
     "FFlagUIBloxUseFullPageModalZIndex": true,
@@ -169,8 +170,8 @@
     "InfluxHundredthsPercentage": 0,
     "InfluxInstallHundredthsPercentage": 10000,
     "ShowInstallSuccessPrompt": true,
-    "FStringFlagRepoGitHashFastString": "a3f0c37fc276e6a6a8d5a9836c000c4545d41668",
-    "DFStringFlagRepoGitHashDynamicString": "a3f0c37fc276e6a6a8d5a9836c000c4545d41668",
-    "FStringFlipTimeStampFastString": "2024-10-30T22:52:20.448Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-30T22:52:20.448Z"
+    "FStringFlagRepoGitHashFastString": "21aeae1a409fcccbc5a917b1498247bf441aac96",
+    "DFStringFlagRepoGitHashDynamicString": "21aeae1a409fcccbc5a917b1498247bf441aac96",
+    "FStringFlipTimeStampFastString": "2024-10-30T23:07:37.150Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-30T23:07:37.150Z"
 }
