--- a/PCStudioApp.json
+++ b/PCStudioApp.json
@@ -8251,7 +8251,6 @@
     "FFlagTerrainEditorFlattenAutoFix": true,
     "DFStringMemoryBufferForHarmonyData": "{}",
     "FFlagStudioActionContextIntegration": true,
-    "FFlagRefactorTileTextHeights_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T21:58:58",
     "AxisAdornmentGrabSize": 12,
     "AllowVideoPreRoll": true,
     "FFlagLuaAppFixFollowButtonDeeplink_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:14:02",
@@ -8267,6 +8266,10 @@
     "FFlagLuaAppEDPOfficial": true,
     "FFlagEnableNewAuthActionTextExperiment_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:48:03",
     "FFlagSearchEventAddTopResults_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:51:31",
+    "FFlagLuaAppEmphasisOfficial_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T23:00:14",
+    "DFStringCommerceUniverseAllowList_Rollout": "6656347044,6704585586,6710437199,1601065334;60;2024-10-30T23:01:20",
+    "FFlagAXCheckAccessoryDescriptionNotNil_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T23:01:22",
+    "FFlagRefactorTileTextHeights": true,
     "CaptureQTStudioCountersEnabled": true,
     "DFFlagCyclicExecutiveThrottlingCancelWorldStepAccum": false,
     "DFFlagEnableRemoteProfiling": true,
@@ -9208,11 +9211,10 @@
     "FFlagLoginPageCloseOnStartPageOpen": true,
     "DFFlagDoNotReadKdTreeFromMeshHFB2": true,
     "FFlagStudioLoginPageStatusLoading": true,
-    "FStringDefaultModeratedAvatarBodyImageAssetId": "\"89053445842149\"",
-    "FStringDefaultModeratedAvatarHeadImageAssetId": "\"140234539950892\"",
+    "FStringDefaultModeratedAvatarBodyImageAssetId": 89053445842149,
+    "FStringDefaultModeratedAvatarHeadImageAssetId": 140234539950892,
     "FFlagARKS1766EnableGranularPublish": true,
     "FFlagRefactorTeleportServiceGlobalFields4": true,
-    "FFlagStudioRegisterServiceVisibilityServiceEarly_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:04:48",
     "FFlagUseNewImageOnModeratedThumbnails_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:05:45",
     "FFlagStudioPreloadLoginPageQImages": true,
     "FFlagStudioMakeDmplAsyncComponent5_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:06:41",
@@ -9222,6 +9224,7 @@
     "FFlagScriptEditorDocumentationOnHover5_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:26:05",
     "FFlagTelemetryTypecheckClear_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:29:53",
     "FFlagCAPNewTutorial_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:39:57",
+    "FFlagStudioRegisterServiceVisibilityServiceEarly": true,
     "FFlagRenderEnableGlobalInstancingD3D11": true,
     "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
@@ -9345,6 +9348,8 @@
     "FFlagEnableDesktopCommerce_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:51:12",
     "FFlagEnableReceiptFetching_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:51:12",
     "FFlagEnableRobloxCommerce2_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:51:12",
+    "FFlagMicroProfileCounterOverflowFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:55:40",
+    "FFlagUIDragDetectorSupportSelectionModeDragging3_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:55:42",
     "FFlagDebugLuaAppValidateProps": true,
     "FStringFeature_CookieProtocolEnabled": "524;100",
     "FFlagUseParallelTypecheckInLSP2": true,
@@ -9362,8 +9367,8 @@
     "FFlagSimpleTimerUseRuntimeSyncPrims": true,
     "FFlagEnableVisBugChecks27": true,
     "DFFlagUseVisBugChecks_PlaceFilter": "true;7208091524;7902470429;10489114145;9872472334;8481844229;299659045",
-    "FStringFlagRepoGitHashFastString": "c17cbf4b174d5480c8bf39904e5ebd86277c8f93",
-    "DFStringFlagRepoGitHashDynamicString": "c17cbf4b174d5480c8bf39904e5ebd86277c8f93",
-    "FStringFlipTimeStampFastString": "2024-10-30T22:52:44.316Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-30T22:52:44.316Z"
+    "FStringFlagRepoGitHashFastString": "80e6740b025ac5d587929fcd4794d7c91b32186a",
+    "DFStringFlagRepoGitHashDynamicString": "80e6740b025ac5d587929fcd4794d7c91b32186a",
+    "FStringFlipTimeStampFastString": "2024-10-30T23:08:08.103Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-30T23:08:08.103Z"
 }
