--- a/PCClientBootstrapper.json
+++ b/PCClientBootstrapper.json
@@ -154,8 +154,8 @@
     "FFlagValidateMachineUseApi": true,
     "FStringDefaultModeratedAvatarBodyImageAssetId": 89053445842149,
     "FStringDefaultModeratedAvatarHeadImageAssetId": 140234539950892,
-    "FFlagUseNewImageOnModeratedThumbnails_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:05:45",
     "FFlagMicroProfileCounterOverflowFix_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-30T22:55:40",
+    "FFlagUseNewImageOnModeratedThumbnails": true,
     "FFlagWindowsBootstrapperAdditionalCdnDiagnostics2": true,
     "FFlagBootstrapperEnableOptOutDUAR": true,
     "FFlagUIBloxUseFullPageModalZIndex": true,
@@ -170,8 +170,8 @@
     "InfluxHundredthsPercentage": 0,
     "InfluxInstallHundredthsPercentage": 10000,
     "ShowInstallSuccessPrompt": true,
-    "FStringFlagRepoGitHashFastString": "ae9e983ac911e45aec5304af3cee5e5052989c4f",
-    "DFStringFlagRepoGitHashDynamicString": "ae9e983ac911e45aec5304af3cee5e5052989c4f",
-    "FStringFlipTimeStampFastString": "2024-10-30T23:11:30.289Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-30T23:11:30.289Z"
+    "FStringFlagRepoGitHashFastString": "4743f3a564dadc344441e00b34370df018cad119",
+    "DFStringFlagRepoGitHashDynamicString": "4743f3a564dadc344441e00b34370df018cad119",
+    "FStringFlipTimeStampFastString": "2024-10-30T23:14:21.094Z",
+    "DFStringFlipTimeStampDynamicString": "2024-10-30T23:14:21.094Z"
 }
