--- a/MacStudioBootstrapper.json
+++ b/MacStudioBootstrapper.json
@@ -156,16 +156,18 @@
     "FStringDefaultModeratedAvatarHeadImageAssetId": 140234539950892,
     "FFlagUseNewImageOnModeratedThumbnails": true,
     "FFlagMicroProfileCounterOverflowFix": true,
-    "FFlagEnableLauncherGuard_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-31T16:43:01",
+    "FFlagWindowsInstallerUseSyncPost": true,
+    "FFlagWindowsInstallerPostWebLaunch": true,
+    "FFlagEnableLauncherGuard": false,
     "DFFlagVoiceChatEnableApiSecurityCheck_PlaceFilter": "false;16725311284",
     "FFlagUIBloxUseFullPageModalZIndex": true,
-    "FFlagMacInstallerMoveExistingAppBeforeDelete_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-31T16:34:33",
+    "FFlagMacInstallerMoveExistingAppBeforeDelete": true,
     "FIntBootstrapper64BitStudioPercentage": 5,
     "InfluxInstallHundredthsPercentage": 1,
     "ShowInstallSuccessPrompt": false,
     "FFlagNotificationPersonAddIcons": true,
-    "FStringFlagRepoGitHashFastString": "2df8036d14848dfb62250ea47021bd164665c942",
-    "DFStringFlagRepoGitHashDynamicString": "2df8036d14848dfb62250ea47021bd164665c942",
-    "FStringFlipTimeStampFastString": "2024-10-31T17:18:39.455Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-31T17:18:39.455Z"
+    "FStringFlagRepoGitHashFastString": "a64fe52860be0d5e0fb5520d4d7f0b6856187220",
+    "DFStringFlagRepoGitHashDynamicString": "a64fe52860be0d5e0fb5520d4d7f0b6856187220",
+    "FStringFlipTimeStampFastString": "2024-11-01T00:45:04.446Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-01T00:45:04.446Z"
 }
