--- a/PCStudioBootstrapper.json
+++ b/PCStudioBootstrapper.json
@@ -156,7 +156,9 @@
     "FStringDefaultModeratedAvatarHeadImageAssetId": 140234539950892,
     "FFlagUseNewImageOnModeratedThumbnails": true,
     "FFlagMicroProfileCounterOverflowFix": true,
-    "FFlagEnableLauncherGuard_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-10-31T16:43:01",
+    "FFlagWindowsInstallerUseSyncPost": true,
+    "FFlagWindowsInstallerPostWebLaunch": true,
+    "FFlagEnableLauncherGuard": false,
     "FFlagWindowsBootstrapperAdditionalCdnDiagnostics2": true,
     "FFlagBootstrapperEnableOptOutDUAR": true,
     "FFlagUIBloxUseFullPageModalZIndex": true,
@@ -169,8 +171,8 @@
     "FFlagWindowsStudioFirstLaunchArgument2": true,
     "DFFlagVoiceChatEnableApiSecurityCheck_PlaceFilter": "false;16725311284",
     "FFlagNotificationPersonAddIcons": true,
-    "FStringFlagRepoGitHashFastString": "7d29f7a10a1d4d18d27192ad2e9dfffdefef23c1",
-    "DFStringFlagRepoGitHashDynamicString": "7d29f7a10a1d4d18d27192ad2e9dfffdefef23c1",
-    "FStringFlipTimeStampFastString": "2024-10-31T17:16:18.805Z",
-    "DFStringFlipTimeStampDynamicString": "2024-10-31T17:16:18.805Z"
+    "FStringFlagRepoGitHashFastString": "a64fe52860be0d5e0fb5520d4d7f0b6856187220",
+    "DFStringFlagRepoGitHashDynamicString": "a64fe52860be0d5e0fb5520d4d7f0b6856187220",
+    "FStringFlipTimeStampFastString": "2024-11-01T00:45:04.446Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-01T00:45:04.446Z"
 }
