--- a/MacClientBootstrapper.json
+++ b/MacClientBootstrapper.json
@@ -162,6 +162,7 @@
     "DFFlagVoiceChatEnableApiSecurityCheck_PlaceFilter": "false;16725311284",
     "FFlagUIBloxUseFullPageModalZIndex": true,
     "FFlagMacInstallerMoveExistingAppBeforeDelete": true,
+    "FFlagMacInstallerUseEventIngest_Staged": "true;SteadyState;10;30;Rollout;100;30;Promote;2024-11-01T15:18:10",
     "DFIntCrashUploadToBacktracePercentage": 10,
     "DeprecatedOSXLinkURL": "https://en.help.roblox.com/hc/articles/203312800",
     "DeprecatedOSXMinorVersion": 9,
@@ -176,8 +177,8 @@
     "DeprecatedOSXMajorVersion": 10,
     "FFlagEnableDeepLinkUseExistingClient": true,
     "FFlagEnableSingleInstanceRobloxClient": true,
-    "FStringFlagRepoGitHashFastString": "a64fe52860be0d5e0fb5520d4d7f0b6856187220",
-    "DFStringFlagRepoGitHashDynamicString": "a64fe52860be0d5e0fb5520d4d7f0b6856187220",
-    "FStringFlipTimeStampFastString": "2024-11-01T00:45:04.446Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-01T00:45:04.446Z"
+    "FStringFlagRepoGitHashFastString": "36fad7e9c1b204a0ddcdf8bcfa11ebae0197e185",
+    "DFStringFlagRepoGitHashDynamicString": "36fad7e9c1b204a0ddcdf8bcfa11ebae0197e185",
+    "FStringFlipTimeStampFastString": "2024-11-01T15:19:19.953Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-01T15:19:19.953Z"
 }
